# glimpse

./: Cargo.toml  README.md
src/: README.md  lib.rs  main.rs
src/ai/: bedrock.rs  embedding.rs  llm.rs  mod.rs  openai.rs  vision.rs
src/graphics/: images.rs
src/processing/: args.rs  metadata.rs  mod.rs  runner.rs
src/processor/: ai.rs  imageproc.rs  mod.rs
